# file-read-assigment

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/examples/: usage.py
src/file_reader/: __init__.py  core.py  extended.py
tests/: test_file_reader.py
